--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,7 @@ footer {
 @media (max-width: 1100px) {
     .wrapper {
         width: auto;
-        padding: 0 auto;
+        padding: 0;
     }
     .picture__intro {
         display: none;
